--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/admin.js": "/js/admin.js",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
+    "/js/site/app.js": "/js/site/app.js",
+    "/css/site/app.css": "/css/site/app.css",
     "/css/admin.css": "/css/admin.css"
 }
