--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,14 @@
 
     RewriteEngine On
 
+    # Force to SSL
+    RewriteCond %{HTTP:HTTPS} !1
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+
+    # Force to WWW
+    RewriteCond %{HTTP_HOST} !^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]  
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
