--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,7 +6,7 @@
     RewriteEngine On
 
     # Force to SSL
-    RewriteCond %{HTTP:HTTPS} !1
+    RewriteCond %{HTTPS} !=on
     RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
 
     # Force to WWW
