--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,12 +6,12 @@
     RewriteEngine On
 
     # Force to SSL
-    RewriteCond %{HTTPS} !=on
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+    #RewriteCond %{HTTPS} !=on
+    #RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
 
     # Force to WWW
     RewriteCond %{HTTP_HOST} !^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]  
+    RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]  
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
