--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,8 +10,8 @@
     #RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
 
     # Force to WWW
-    RewriteCond %{HTTP_HOST} !^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]  
+    #RewriteCond %{HTTP_HOST} !^www\.(.*)$ [NC]
+    #RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]  
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
