--- a/.htaccess
+++ b/.htaccess
@@ -24,7 +24,7 @@
     RewriteRule ^ %1 [L,R=301]     
 
     # Handle Front Controller...
-    RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.gif|\.jpeg|robots\.txt)$ [NC]
+    RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.gif|\.jpeg|\.woff|\.woff2|robots\.txt)$ [NC]
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]     
