--- a/.htaccess
+++ b/.htaccess
@@ -32,6 +32,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_URI} !^/public/
-    RewriteRule ^(css|js|images|vendor|storage)/(.*)$ public/$1/$2 [L,NC]
+    RewriteRule ^(css|js|images|vendor|storage|robots\.txt)/(.*)$ public/$1/$2 [L,NC]
 
 </IfModule>
