--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,15 @@
 
 </IfModule>
 
+<IfModule mod_headers.c>
+    <FilesMatch "\.(ico|gif|jpg|jpeg|png)$">
+          Header set Cache-Control "max-age=31536000"
+    </FilesMatch>
+    <FilesMatch "\.(css|js)$">
+          Header set Cache-Control "max-age=31536000"
+    </FilesMatch>
+</IfModule>
+
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
     ExpiresActive On
