--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelium/sitemap": "^7.0",
-        "lucascudo/laravel-pt-br-localization": "^1.1"
+        "lucascudo/laravel-pt-br-localization": "^1.1",
+        "mews/captcha": "3.2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
